# programmiersprachen-aufgabe-1

./: Aufgabe14.rtf  Aufgabe15.rtf  README.md  Schlüsselwörter 1.17  aufgabe16.rtf  aufgabe17.rtf
source/: CMakeLists.txt  aufgabe110.cpp  aufgabe111.cpp  aufgabe112.cpp  aufgabe113.cpp  aufgabe114.cpp  aufgabe115.cpp  aufgabe116.cpp  aufgabe13.cpp  aufgabe18.cpp  aufgabe19.cpp
