add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)
add_executable(aufgabe13 aufgabe13.cpp)
add_executable(aufgabe18 aufgabe18.cpp)
add_executable(aufgabe19 aufgabe19.cpp)
add_executable(aufgabe110 aufgabe110.cpp)
add_executable(aufgabe111 aufgabe111.cpp)
add_executable(aufgabe112 aufgabe112.cpp)
add_executable(aufgabe113 aufgabe113.cpp)
add_executable(aufgabe114 aufgabe114.cpp)
add_executable(aufgabe115 aufgabe115.cpp)
add_executable(aufgabe116 aufgabe116.cpp)





# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
